@@ -35,5 +35,5 @@ o make docs look better: index, section tocs
 o make better and faster doxrox engine
 o create man pages
 o implement IGRAPH_STRONG in igraph_decompose
-
+o top-down and radial layout algorithm for tree graphs
 o Hamilton and Euler circles/paths
