@@ -1,8 +1,15 @@
 #! /bin/sh
+for i in glibtoolize libtoolize; do
+  LIBTOOLIZE=`which $i` && break
+done
+if [ -z "$LIBTOOLIZE" ]; then
+  echo libtoolize or glibtoolize not found or not in the path!
+  exit 1
+fi
 
 set -x
 aclocal
-libtoolize --force --copy
+$LIBTOOLIZE --force --copy
 autoheader
 automake --add-missing --copy
 autoconf
